# File_Processing_with_Python

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  lint.sh  pyproject.toml  setenv.sh  setup.cfg  stress.py
.circleci/: config.yml
processing_tools/: html.py  main.py  office.py  settings.py  spreadsheet.py  types.py  utils.py
processing_tools/logging/: config.py  logging.conf
stressor/: Dockerfile
tests/: test_app.py
tests/files/: power-point-background.pptx  sample-powerpoint.pptx  sample.xls  test-word.docx  test.xhtml
