[tool.poetry]
name = "processing_tools"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
gunicorn = "20.0.4"
requests = "^2.27.1"
uvicorn = "^0.17.4"
python-json-logger = "^2.0.2"
sentry-sdk = "^1.5.6"
prometheus-fastapi-instrumentator = "^5.7.1"
psutil = "^5.9.0"
rich = "^12.0.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]
types-requests = "^2.27.8"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.931"
isort = "^5.10.1"
pytest-asyncio = "^0.17.2"
pdfplumber = "^0.6.0"
pytest = "^7.0.0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
